fixed the styles

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -21,7 +21,7 @@ body
     .container
         position: relative
         background: color.$Grayish-Blue
-        height: auto
+        height: 15rem auto
         width: 28rem
         border-radius: 1rem
         padding-block: 1rem
@@ -37,6 +37,7 @@ body
             font-size: 1rem
             padding-block: 1rem 3.6rem
             color: color.$Light-Cyan
+            margin-bottom: 2.5rem
 
         .pauseIcon
             position: absolute
@@ -69,7 +70,7 @@ body
             height: 3rem
             width: 3rem
             left: 46.5%
-            top: 93%
+            top: 89%
             border-radius: 50%
             border: none
             background: color.$Neon-Green url(/images/icon-dice.svg) no-repeat
